<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_item1"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_nav_item1"/>


        <item
                android:id="@+id/nav_item2"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_nav_item2"/>




    </group>


    <item android:title="Account">
        <menu>
            <item
                    android:id="@+id/subitem1"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_navsubmenu1"/>
            <item
                    android:id="@+id/subitem2"
                    android:icon="@drawable/ic_account"
                    android:title="@string/menu_navsubmenu2"/>
            <item
                    android:id="@+id/subitem3"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_navsubmenu3"/>
        </menu>
    </item>

</menu>
