<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <Button
            android:id="@+id/passingdata_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mb"

            android:text="@string/passingdatafragments"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />

    <Button
            android:id="@+id/jatpack_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mb"

            android:text="@string/jatpack"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />


    <Button
            android:id="@+id/mvvm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mb"

            android:text="@string/mvvmexample"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />
    <Button
            android:id="@+id/popupbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mb"

            android:text="@string/popup"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />

    <Button
            android:id="@+id/systembutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popupbutton"

            android:text="@string/system"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />

    <Button
            android:id="@+id/bottomnavigationbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systembutton"

            android:text="Bottom navigation"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />


</LinearLayout>